syntax = "proto3";

service CompareAndSwapService {
  rpc CompareAndSwap (CompareAndSwapRequest) returns (CompareAndSwapResponse);
}

message CompareAndSwapRequest {
	uint32 slot = 1;
	uint32 leader = 2;
	string address =3;
}
message CompareAndSwapResponse {
	bool ok = 1;
}